--- a/views/page.ejs
+++ b/views/page.ejs
@@ -31,6 +31,9 @@
     <link href="/bower_components/jquery-colorbox/example1/colorbox.css" rel="stylesheet" type="text/css" />
     <script src="/js/jscolor/jscolor.js" type="text/javascript"></script>
 
+    <script src="/bower_components/jquery-modal/jquery.modal.min.js" type="text/javascript" charset="utf-8"></script>
+    <link href="/bower_components/jquery-modal/jquery.modal.css" rel="stylesheet" type="text/css" />
+
     <!-- filepicker -->
     <script type="text/javascript" src="//api.filepicker.io/v2/filepicker.js"></script>
 
